@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.034.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.041.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Mojolicious-Plugin-ToolkitRenderer",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Mojolicious::Plugin::ToolkitRenderer",
@@ -31,9 +30,10 @@ my %WriteMakefileArgs = (
     "Mojolicious::Lite" => 0,
     "Test::Mojo" => 0,
     "Test::More" => 0,
-    "Test::Most" => 0
+    "Test::Most" => 0,
+    "blib" => "1.01"
   },
-  "VERSION" => "1.06",
+  "VERSION" => "1.07",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -41,7 +41,6 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
@@ -52,6 +51,7 @@ my %FallbackPrereqs = (
   "Test::Mojo" => 0,
   "Test::More" => 0,
   "Test::Most" => 0,
+  "blib" => "1.01",
   "strict" => 0,
   "warnings" => 0
 );
