@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::ToolkitRenderer
 
 {{$NEXT}}
+        - Add "content" keyword into stash as default controller->content
 
 1.06      2015-04-20 14:26:58-07:00 America/Los_Angeles
         - Switch render_exception to reply->exception (Mojo deprecated old sub)
